--- a/layouts/_default/contact.html
+++ b/layouts/_default/contact.html
@@ -8,8 +8,11 @@
         <div class="pb-5">
           {{ .Content }}
         </div>
-        
+        {{ if site.Params.netlify }}
+        <form action="{{ site.Params.contact_form_action }}" netlify netlify-honeypot="always-empty">
+        {{ else }}
         <form action="{{ site.Params.contact_form_action }}" method="post">
+        {{ end }}
           <div class="row g-4">
             <div class="col-md-6 mb-3 mt-0">
               <input type="text" class="form-control" placeholder="{{ i18n `first_name`}}" aria-label="{{ i18n `first_name`}}" name="{{ i18n `first_name`}}" required>
